fix: Fixed inconsistent left drawer expansion/collapse behavior
- Adjusted the left drawer component to function properly on screens with a width of 820px or less.
- Ensured smooth expansion and collapse of the left drawer when clicked.
- Ensured the overflow-y of content is handled in smaller screens.
- Modified the changes for organization dashboard screens to match the superadmin screens when the left drawer is collapsed.
- Covered the changes with tests.
- Ensured no other functionality got affected.

--- a/src/components/OrganizationScreen/OrganizationScreen.module.css
+++ b/src/components/OrganizationScreen/OrganizationScreen.module.css
@@ -126,7 +126,7 @@
 
 @media (max-width: 1120px) {
   .contract {
-    padding-left: calc(250px + 2rem + 1.5rem);
+    padding-left: calc(276px + 2rem + 1.5rem);
   }
   .collapseSidebarButton {
     width: calc(250px + 2rem);
@@ -134,9 +134,6 @@
 }
 
 @media (max-height: 900px) {
-  .pageContainer {
-    padding: 1rem 1.5rem 0 calc(300px + 2rem);
-  }
   .collapseSidebarButton {
     height: 30px;
     width: calc(300px + 1rem);
